# libcon4m

./: .gitignore  Dockerfile.test  Readme.md  build.sh  dev  meson.build  meson.options
.github/workflows/: test.yml
doc/: reference.md
include/: con4m.h  con4m_ansi.h  con4m_base.h  con4m_breaks.h  con4m_colors.h  con4m_hex.h  con4m_str.h  con4m_style.h  con4m_subproc.h  con4m_switchboard.h  format.h  hatrack.h  quark.h  unibreak.h  utf8proc.h  vendor.h
include/adts/: box.h  buffer.h  codepoint.h  datetime.h  dict.h  dt_callbacks.h  dt_flags.h  dt_grids.h  dt_lists.h  dt_mixed.h  dt_streams.h  dt_strings.h  dt_trees.h  duration.h  flags.h  grid.h  ipaddr.h  list.h  mixed.h  set.h  string.h  tree.h  tuple.h
include/compiler/: ast_utils.h  cfgs.h  codegen.h  compile.h  dt_compile.h  dt_errors.h  dt_files.h  dt_lex.h  dt_module.h  dt_nodeinfo.h  dt_parse.h  dt_scopes.h  dt_specs.h  errors.h  lex.h  module.h  parse.h  partial.h  rtmodule.h  scope.h  spec.h  treematch.h
include/compiler/datatypes/: cfg.h  compile.h  error.h  file.h  lex.h  nodeinfo.h  parse.h  partials.h  scope.h  spec.h
include/con4m/: ansi.h  base.h  box.h  breaks.h  buffer.h  c4str.h  c4strbase.h  cbacktrace.h  codepoint.h  color.h  colors.h  config.h  conststr.h  datatypes.h  dict.h  exception.h  ffi.h  format.h  fp.h  gc.h  grid.h  hex.h  init.h  kargs.h  list.h  lists.h  literal.h  macros.h  marshal.h  math.h  mixed.h  object.h  path.h  random.h  refcount.h  set.h  str.h  stream.h  string.h  style.h  (+13 more)
include/con4m/datatypes/: box.h  buffers.h  callbacks.h  codepoints.h  colors.h  crypto.h  exceptions.h  ffi.h  format.h  frontend.h  grids.h  io.h  kargs.h  lists.h  literals.h  memory.h  mixed.h  objects.h  streams.h  strings.h  styles.h  tree_pattern.h  trees.h  tuples.h  types.h  ufi.h  vm.h
include/con4m/frontend/: errors.h  lex.h
include/core/: dt_alloc.h  dt_exceptions.h  dt_ffi.h  dt_kargs.h  dt_objects.h  dt_types.h  dt_ufi.h  dt_vm.h  exception.h  ffi.h  gc.h  init.h  literal.h  marshal.h  module.h  object.h  refcount.h  type.h  typestore.h  vm.h
include/crypto/: dt_crypto.h  sha.h
include/frontend/: cfgs.h  compile.h  errors.h  lex.h  parse.h  partial.h  scope.h  spec.h  treematch.h
include/frontend/datatypes/: cfg.h  compile.h  error.h  file.h  lex.h  parse.h  partials.h  scope.h  spec.h
include/hatrack/: arr64.h  ballcap.h  base.h  capq.h  counters.h  crown.h  debug.h  dict.h  duncecap.h  flexarray.h  gate.h  hash.h  hatomic.h  hatrack_common.h  hatrack_config.h  hatring.h  hatvtable.h  helpmanager.h  hihat.h  hq.h  llstack.h  logring.h  lohat-a.h  lohat.h  lohat_common.h  malloc.h  mmm.h  newshat.h  oldhat.h  q64.h  queue.h  refhat.h  set.h  stack.h  swimcap.h  tiara.h  tophat.h  vector.h  witchhat.h  woolhat.h  (+2 more)
include/io/: ansi.h  file.h  http.h  subproc.h  term.h
include/test/: testhat.h
include/util/: cbacktrace.h  dt_styles.h  gopt.h  math.h  parsing.h  path.h  random.h  richlit.h  style.h  styledb.h  tree_pattern.h  watch.h  wrappers.h
scripts/: run_tests.sh
src/: README.md  ansi.c  breaks.c  colors.c  hex.c  string.c  style.c  subproc.c  switchboard.c
src/adts/: README.md  box.c  buffer.c  callback.c  datetime.c  dict.c  duration.c  flags.c  grid.c  hatlists.c  ipaddr.c  list.c  mixed.c  numbers.c  set.c  size.c  streams.c  string.c  tree.c  tuple.c
src/compiler/: ast_utils.c  cfg.c  cfg_build.c  check_pass.c  codegen.c  compile.c  decl_pass.c  disasm.c  errors.c  lex.c  memory_layout.c  module.c  objgen.c  parse.c  scope.c  specs.c
src/con4m/: ansi.c  attrstore.c  box.c  breaks.c  buffer.c  c4str.c  callback.c  collect.c  colors.c  conststr.c  ctrace.c  dict.c  exceptions.c  ffi.c  flags.c  format.c  gc.c  gcbase.c  grid.c  hatlists.c  hex.c  init.c  ipaddr.c  kargs.c  list.c  lists.c  literals.c  marshal.c  mixed.c  numbers.c  object.c  path.c  richlit.c  set.c  specs.c  streams.c  string.c  style.c  styledb.c  subproc.c  (+12 more)
src/con4m/compiler/: ast_utils.c  cfg.c  cfg_build.c  check_pass.c  codegen.c  compile.c  decl_pass.c  disasm.c  errors.c  lex.c  memory_layout.c  objgen.c  parse.c  partial_lit.c  scope.c  specs.c
src/con4m/crypto/: sha.c
src/con4m/frontend/: cfg.c  cfg_build.c  cfg_repr.c  check_pass.c  codegen.c  compile.c  decl_pass.c  errors.c  lex.c  parse.c  pass1.c  scope.c  specs.c  treematch.c
src/con4m/static/: colors.c  richlit.c
src/core/: attrstore.c  automarshal.c  autounmarshal.c  collect.c  exceptions.c  ffi.c  gcbase.c  init.c  kargs.c  literals.c  marshal.c  object.c  rtsetup.c  types.c  typestore.c  ufi.c  unmarshal.c  validation.c  vm.c  vmmarshal.c
src/harness/con4m_base/: results.c  run.c  scan.c  test.c  validation.c
src/hatrack/: hatrack-internal.h
src/hatrack/array/: arr64.c  flexarray.c  vector.c  zeroarray.c
src/hatrack/hash/: ballcap.c  crown-internal.h  crown.c  dict.c  duncecap.c  hihat-a.c  hihat-internal.h  hihat.c  lohat-a.c  lohat.c  newshat.c  oldhat.c  (+9 more)
src/io/: ansi.c  file.c  http.c  subproc.c  switchboard.c  term.c
src/quark/: quark.c
src/tests/: test.c
src/util/: colors.c  conststr.c  ctrace.c  format.c  fptostr.c  getopt.c  getopt_parse.c  getopt_tokenize.c  grammar.c  parse_repr.c  parse_tree.c  parsing.c  path.c  richlit.c  segv.c  static_config.c  style.c  styledb.c  tree_pattern.c  wrappers.c
subprojects/: gumbo-parser.wrap
sys/: __init.c4m  builtins.c4m  file.c4m  list.c4m  random.c4m  string.c4m  time.c4m
tests/: assignops_divide.c4m  assignops_shift_right.c4m  basic04.c4m  basic05.c4m  basic1.c4m  basic10.c4m  basic11.c4m  basic12.c4m  basic13.c4m  basic14.c4m  basic15.c4m  basic16.c4m  basic17.c4m  basic18.c4m  basic2.c4m  basic20.c4m  basic23.c4m  basic25.c4m  basic26.c4m  basic27.c4m  basic4.c4m  basic5.c4m  basic6.c4m  basic7.c4m  basic8.c4m  basic9.c4m  basic_if.c4m  builtins.c4m  crash.c4m  dead.c4m  decls.c4m  decls2.c4m  dict.c4m  docstrings.c4m  empty.c4m  enum.c4m  enum2.c4m  extern_syntax.c4m  fib-switch.c4m  fib.c4m  (+12 more)
todo/: extern2.c4m  modparam.c4m  rich.c4m  richmarshal.c4m  sections.c4m  sigoverlap.c4m  spec1.c4m  spec2.c4m  typeof.c4m  use1.c4m  usemissing.c4m
(+24 files in other folders)
